2010-10-18  Petr Machata <pmachata@redhat.com>

    * sysdeps/linux-gnu/s390/trace.c: Support 5th argument fetching on s390.
      Contributed by Supriya Kannery.
    * sysdeps/linux-gnu/s390/arch.h: Add support for fork/exec on 390.
    * output.c: Cleanup.

2010-10-14  Petr Machata <pmachata@redhat.com>

    * ltrace.1: Remove claim that only 32-bit binaries are supported.
    * testsuite/ltrace.minor/trace-fork.exp: Make fork test suite more accurate

2010-10-08  Edgar E. Iglesias  <edgar@axis.com>

	* sysdeps/linux-gnu/cris/Makefile: New.
	* sysdeps/linux-gnu/cris/arch.h: Ditto.
	* sysdeps/linux-gnu/cris/plt.c: Ditto.
	* sysdeps/linux-gnu/cris/ptrace.h: Ditto.
	* sysdeps/linux-gnu/cris/regs.c: Ditto.
	* sysdeps/linux-gnu/cris/signalent.h: Ditto.
	* sysdeps/linux-gnu/cris/syscallent.h: Ditto.
	* sysdeps/linux-gnu/cris/trace.c: Ditto.

2010-10-08  Zach Welch <zwelch@codesourcery.com>

	* Ensure Thumb mode gets set correct when updating ARM PC.

2010-10-08  Zach Welch <zwelch@codesourcery.com>

	* Allow ARM PLT lookups to work when containing Thumb stubs.

2010-10-07  Zach Welch <zwelch@codesourcery.com>

	* Improve breakpoint insertion to work with Thumb procedures.

2010-09-30  Zach Welch <zwelch@codesourcery.com>

	* Improve ARM syscall_p to handle Thumb-2 syscalls.

2010-01-08  Arnaud Patard <apatard@mandriva.com>

	* sysdeps/linux-gnu/mipsel/mipsel.h: Add floating point register offset.
	* sysdeps/linux-gnu/x86_64/{ptrace.h, trace.c}: Save a copy of register vlaues and handle floats.
	* sysdeps/linux-gnu/mips: Symlink created.
	* sysdeps/linux-gnu/mipsel/trace.c: Handle more argument types.
	* sysdeps/linux-gnu/trace.c: Don't use PTRACE_SINGLESTEP for MIPS.
	* sysdeps/linux-gnu/arm/trace.c: Fix return value.
	* handle_event.c: Fix for MIPS.
	* sysdeps/linux-gnu/mipsel/{plt.c, regs.c}: Fix includes.
	* sysdeps/linux-gnu/mipsetl/syscallent.h: Cleanup.
	* sysdeps/linux-gnu/mipsel/signalent.h: Cleanup.
	* sysdeps/linux-gnu/trace.c: Fix umovelong.